[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Pixel_32.tres" type="DynamicFont" id=2]

[node name="Game" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 12.7675, 7.59651 )
color = Color( 0.113725, 0.109804, 0.109804, 1 )

[node name="Title" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -201.5
margin_top = 15.9606
margin_right = 201.5
margin_bottom = 49.9606
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.368627, 0.862745, 0.14902, 1 )
text = "Choose a number between 0 and 1000"

[node name="IChoseButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -200.0
margin_right = 327.0
margin_bottom = -149.0
custom_fonts/font = ExtResource( 2 )
text = "Ok! I Chose"

[node name="Message" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.5
margin_top = -60.5
margin_right = 155.5
margin_bottom = 60.5
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0.368627, 0.862745, 0.14902, 1 )
text = "Dummy Text
"

[node name="GreaterButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 300.0
margin_top = -130.0
margin_right = 419.1
margin_bottom = -79.0
custom_fonts/font = ExtResource( 2 )
text = "Greater"

[node name="LesserButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = -130.0
margin_right = 219.0
margin_bottom = -79.0
custom_fonts/font = ExtResource( 2 )
text = "Lesser"

[node name="RightButton" type="Button" parent="."]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_top = -65.0
margin_right = 319.0
margin_bottom = -14.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.215686, 0.415686, 0.12549, 1 )
text = "Right"

[connection signal="pressed" from="IChoseButton" to="." method="_on_IChoseButton_pressed"]
[connection signal="pressed" from="GreaterButton" to="." method="_on_GreaterButton_pressed"]
[connection signal="pressed" from="LesserButton" to="." method="_on_LesserButton_pressed"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
